[package]
name = "rayvarust"
version = "0.1.0"
edition = "2018"
authors = ["LoipesMas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5"
rapier2d = { version = "0.11.1", features = [ "simd-stable" ] }


[profile.release]
panic = 'abort'
codegen-units = 1
lto = true


[profile.dev.package.rapier2d]
opt-level = 3
